[bug] fixes scroll jumping on carriage returns

--- a/src/features/blocks/Blocks.css
+++ b/src/features/blocks/Blocks.css
@@ -83,7 +83,7 @@
   display: inline;
   min-width: 15em;
   max-width: 15em;
-  overflow: hidden;
+  overflow: auto;
   /* min-height: 1.5em; */
   margin-bottom: -0.05em;
   padding-bottom: 0.1em;
